checkout account verification

--- a/app/partials/submenu.html
+++ b/app/partials/submenu.html
@@ -1,6 +1,6 @@
-    <h1 class="phoodeez_funnel">
+    <h1 class="phoodeez_funnel" ng-show="products.catName">
  		<a ui-sref="home"><span class="glyphicon glyphicon-circle-arrow-left" aria-hidden="true"></span></a> 
- 		<span ng-show="products.catName">Recommendations for {{products.catName}}</span>
+ 		Recommendations for {{products.catName}}
     </h1>
     <div class="container">
         <div class="row cat_row">
