--- a/app/partials/modals.html
+++ b/app/partials/modals.html
@@ -4,7 +4,8 @@
     <div class="modal-header">
     	<button type="button" class="close" ng-click="cancel()"	 aria-label="Close"><span aria-hidden="true">&times;</span></button>
         <h4 class="modal-title login-title">
-        	<span ng-show="!signupbox">Sign in</span>
+        	<span ng-show="!signupbox && loginData">You must be logged in to checkout</span>
+        	<span ng-show="!signupbox && !loginData">Sign in</span>
         	<span ng-show="signupbox">Create Account</span>
 
         </h4>
