--- a/app/partials/modals.html
+++ b/app/partials/modals.html
@@ -111,7 +111,7 @@
 				</div>
 				<div class="package-addtocart">
 
-					<button ng-if="!cartAction" class="btn btn-primary" ng-click="cartSubmit(singleData.package.id, singleData.package.post.post_excerpt, singleData.option.product_description, singleData.option.product_title, singleData.option.product_id, model.qty, singleData.package.min_price, itemNote);">Add to Cart</button>	
+					<button ng-if="!cartAction" class="btn btn-primary" ng-click="cartSubmit(singleData.package.id, singleData.package.post.post_title, singleData.option.product_description, singleData.option.product_title, singleData.option.product_id, model.qty, singleData.package.min_price, itemNote);">Add to Cart</button>	
 
 					<button ng-if="cartAction" class="btn btn-primary" ng-click="cartUpdate(cartAction.id, cartAction.cart.$$hashKey, model.qty, itemNote);">Update Item</button>
 				</div>
